feat: v0.3.9 — Loot System, Mob Scaling, 20 Skills, HUD, Crafting Fix
v0.3.0–v0.3.8: Full RPG loot system
- Loot: 6 rarity tiers, 15 random stats, affix names, mob drops, chest loot
- Crafting: CraftLootHandler with periodic inventory scanner (shift-click fix)
- Salvage: /rpg salvage command
- Combat: MobScaler (distance-based level scaling), final damage formula
- GUI: FloatingDamageRenderer (5 types), RpgStatusOverlay, TargetHUD
- Skills: 20 skills (4 per class), rank system E→SS, mastery gain
- Network: 9 packets (sync, skill, loot, floating damage, rank up)
- Commands: /class (tab-complete), /rpg (debug/reload/salvage)
- HUD: HP/Mana bars, skill hotbar [R][G][C][V], vanilla bars hidden
- Perf: Stat cache, iterator-based cleanup, no System.currentTimeMillis

v0.3.9 fixes:
- CraftLootHandler: periodic ServerTickEvent scanner catches shift-click items
- StatCalculator: off-hand item bonuses now counted
- .gitignore: bin/ added

v0.3.7: Stamina system fully removed (staminaCost/currentStamina retained for NBT)

Co-Authored-By: Claude <noreply@anthropic.com>